
erDiagram

    User ||--o{ Table: has
    Table ||--o{ Column: has
    Table ||--o{ Record: has
    Record ||--o{ Value: has
    Column ||--o{ Value: has
    Processing }o--|| Table: has
    Processing ||--o{ Record: has

    User {
        int id_user PK
        string username
        string email
        string password
    }

    Table {
        int id_table PK
        string name
        datetime created_at
        int id_user FK
    }

    Column {
        int id_column PK
        string name
        string data_type
        int id_table FK
    }

    Processing {
        int id_processing PK
        str status
        datetime created_at
        date started_at
        date finished_at
        error_message: str
        error_detail: str
        int id_table FK
    }

    Record {
        int id_record PK
        date created_at
        int id_processing FK
        int id_table FK
    }

    Value {
        int id_value PK
        string value
        int id_record FK
        int id_column FK
    }
